// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NodesSelection should match snapshot when no selected node 1`] = `
<Connect
  actions={
    Object {
      "addNumber": [Function],
      "addSubValueToObject": [Function],
      "addToArray": [Function],
      "addToObject": [Function],
      "removeFromArray": [Function],
      "removeFromObject": [Function],
      "setStoreState": [Function],
    }
  }
  mapToProps={[Function]}
  setStoreState={[MockFunction]}
>
  <Component />
</Connect>
`;

exports[`NodesSelection should match snapshot when selected node 1`] = `
<Connect
  actions={
    Object {
      "addNumber": [Function],
      "addSubValueToObject": [Function],
      "addToArray": [Function],
      "addToObject": [Function],
      "removeFromArray": [Function],
      "removeFromObject": [Function],
      "setStoreState": [Function],
    }
  }
  mapToProps={[Function]}
  selectedNode="http://webprotege.stanford.edu/R0jI731hv09ZcJeji1fbtY"
  setStoreState={[MockFunction]}
>
  <Component />
</Connect>
`;
